# lab-research-docs

./: README.md  index.html  part4-bessi-procedure_2.html  pose-measurement-system.html  rstudio-exam-practice.html  rstudio-setup.html  rstudio-visualization-sample.html  sample-visualizations.R  setup-opencv-camera.html  setup-opencv-opengl-cpp.html  setup-opencv-opengl-python.html  setup-opencv-opengl.html  setup-unity-viverse-login.html  setup-vscode-ai.html
code/: CMakeLists.txt  capture_gl.cpp  capture_gl.py  capture_min.cpp  capture_min.py
widgets/: exam-s4-answer.html  viz6-plane.html  viz6-scatter.html
